--- a/front/package.json
+++ b/front/package.json
@@ -16,7 +16,8 @@
 		"@mui/icons-material": "^5.11.16",
 		"@mui/material": "^5.13.1",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"react-hook-form": "^7.44.3"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.28",
